# Toshiba-AC-control

./: README.md  pyproject.toml  setup.cfg  versioneer.py
.github/workflows/: black.yml  codeql-analysis.yml  mypy.yml  publish-to-pypi.yml
samples/: toshiba_ac_gui.py
tests/: test_stable_device_id.py
toshiba_ac/: __init__.py  device_manager.py
toshiba_ac/device/: __init__.py  fcu_state.py  features.py  properties.py
toshiba_ac/utils/: __init__.py  amqp_api.py  http_api.py
